@@ -23,16 +23,6 @@
         </section>
         <!-- File list populated by JavaScript -->
         <section id="file-list"></section>
-        
-        <!-- Enhanced file content preview section -->
-        <section id="file-preview-container" class="hidden">
-            <div class="preview-header">
-                <h3 id="preview-filename">File Preview</h3>
-                <button id="close-preview">Close</button>
-            </div>
-            <!-- Media previews will be inserted here -->
-            <pre id="file-content"></pre>
-        </section>
     </main>
     <footer>
         <p>&copy; 2023 MNNIT's Dark Web - Share Files Securely</p>
