@@ -28,9 +28,6 @@ if (!fs.existsSync(FILES_DIR)) {
 // Serve static files from the current directory
 app.use(express.static(__dirname));
 
-// Serve files directory for direct access to files (needed for preview)
-app.use('/preview-files', express.static(FILES_DIR));
-
 /**
  * API Routes
  */
@@ -57,8 +54,7 @@ app.get('/api/files', (req, res) => {
                     name: fileName,
                     type: fileType,
                     size: formatFileSize(stats.size),
-                    lastModified: new Date(stats.mtime).toISOString().split('T')[0],
-                    previewable: isPreviewable(fileName)
+                    lastModified: new Date(stats.mtime).toISOString().split('T')[0]
                 };
             } catch (err) {
                 console.error(`Error reading file stats for ${fileName}:`, err);
@@ -66,8 +62,7 @@ app.get('/api/files', (req, res) => {
                     name: fileName,
                     type: 'unknown',
                     size: '0 B',
-                    lastModified: 'Unknown',
-                    previewable: false
+                    lastModified: 'Unknown'
                 };
             }
         });
@@ -87,61 +82,6 @@ app.get('/api/files/:fileName', (req, res) => {
     }
     
     res.download(filePath);
-});
-
-// Get file information for preview
-app.get('/api/preview-info/:fileName', (req, res) => {
-    const fileName = req.params.fileName;
-    const filePath = path.join(FILES_DIR, fileName);
-    
-    // Check if file exists
-    if (!fs.existsSync(filePath)) {
-        return res.status(404).json({ error: 'File not found' });
-    }
-    
-    try {
-        const stats = fs.statSync(filePath);
-        const fileType = getFileType(fileName);
-        const previewUrl = `/preview-files/${encodeURIComponent(fileName)}`;
-        
-        res.json({
-            name: fileName,
-            type: fileType,
-            size: formatFileSize(stats.size),
-            lastModified: new Date(stats.mtime).toISOString().split('T')[0],
-            previewUrl: previewUrl,
-            isTextFile: isTextFile(fileName)
-        });
-    } catch (err) {
-        console.error(`Error reading file info: ${err}`);
-        res.status(500).json({ error: 'Error reading file information' });
-    }
-});
-
-// Preview a text file's content
-app.get('/api/preview-content/:fileName', (req, res) => {
-    const fileName = req.params.fileName;
-    const filePath = path.join(FILES_DIR, fileName);
-    
-    // Check if file exists
-    if (!fs.existsSync(filePath)) {
-        return res.status(404).send('File not found');
-    }
-    
-    // Check if it's a text file
-    if (!isTextFile(fileName)) {
-        return res.status(400).send('Not a text file');
-    }
-    
-    // Read and send file content
-    fs.readFile(filePath, 'utf8', (err, data) => {
-        if (err) {
-            console.error(`Error reading file: ${err}`);
-            return res.status(500).send('Error reading file');
-        }
-        
-        res.send(data);
-    });
 });
 
 // Start the server
