@@ -1,3 +1,0 @@
-// This file can be deleted.
-// As noted in the existing comments, this file has been replaced by modular JS files.
-// The application now uses app.js, fileSystem.js, ui.js, previewManager.js, and config.js instead.
