@@ -216,125 +216,6 @@ footer {
     color: var(--md-sys-color-on-error-container);
 }
 
-/* File preview section */
-#file-preview-container {
-    margin-top: 2em;
-    background-color: var(--md-sys-color-surface-container);
-    border-radius: 12px;
-    box-shadow: 0 2px 10px rgba(0,0,0,0.15);
-    overflow: hidden;
-    transition: all 0.3s ease;
-}
-
-.hidden {
-    display: none;
-}
-
-.preview-header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 1em;
-    background-color: var(--md-sys-color-surface-container-high);
-    border-bottom: 1px solid var(--md-sys-color-outline-variant);
-}
-
-.preview-header h3 {
-    margin: 0;
-    font-weight: 500;
-}
-
-#close-preview {
-    background: transparent;
-    border: none;
-    color: var(--md-sys-color-primary);
-    cursor: pointer;
-    font-weight: 500;
-    padding: 0.5em 1em;
-    border-radius: 4px;
-    transition: background-color 0.2s;
-}
-
-#close-preview:hover {
-    background-color: var(--md-sys-color-surface-variant);
-}
-
-#file-content {
-    padding: 1em;
-    margin: 0;
-    max-height: 500px;
-    overflow-y: auto;
-    white-space: pre-wrap;
-    word-wrap: break-word;
-    font-family: monospace;
-    line-height: 1.5;
-    color: var(--md-sys-color-on-surface);
-}
-
-/* Enhanced Media Preview Styles */
-.media-preview {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 1em;
-    max-height: 600px;
-    overflow: auto;
-}
-
-.media-preview img {
-    max-width: 100%;
-    max-height: 550px;
-    object-fit: contain;
-}
-
-.media-preview audio, 
-.media-preview video {
-    width: 100%;
-    max-width: 800px;
-}
-
-.media-preview iframe {
-    width: 100%;
-    height: 550px;
-    border: none;
-}
-
-/* Full screen preview option */
-.preview-active body {
-    overflow: hidden;
-}
-
-@media (max-width: 768px) {
-    .media-preview iframe {
-        height: 400px;
-    }
-}
-
-/* Multiple action buttons */
-.file-actions {
-    display: flex;
-    gap: 0.5em;
-}
-
-.file-preview {
-    background: var(--md-sys-color-secondary);
-    color: var(--md-sys-color-on-secondary);
-    border: none;
-    padding: 0.5em 1em;
-    cursor: pointer;
-    border-radius: 20px;
-    transition: background-color 0.3s, transform 0.3s;
-}
-
-.file-preview:hover {
-    background: var(--md-sys-color-secondary-container);
-    transform: scale(1.05);
-}
-
-.file-preview:active {
-    transform: scale(0.95);
-}
-
 /* Text file highlighting */
 .text-file {
     border-left: 4px solid var(--md-sys-color-primary);
